Fix wrapping logo

--- a/src/styles/Navbar.module.css
+++ b/src/styles/Navbar.module.css
@@ -4,10 +4,12 @@
   background-color: #fff;
   display: flex;
   align-items: center;
+  justify-content: flex-start;
+  flex-shrink: 0;
 }
 
 .Bookstore-CMS {
-  width: 15rem;
+  width: fit-content;
   height: 2.313rem;
   margin: 0.375rem 2.938rem 0.125rem 0;
   font-family: Montserrat, sans-serif;
@@ -18,6 +20,7 @@
   line-height: normal;
   letter-spacing: normal;
   color: #0290ff;
+  flex-shrink: 0;
 }
 
 .Text-Style-3 {
